# libtr

./: .gitignore  CMakeLists.txt  README.md  angle_8cppm.html  angle_8hpp.html  angle_8hpp_source.html  annotated.html  annotated_dup.js  audio__buffer_8cppm.html  audio__buffer_8hpp.html  audio__buffer_8hpp_source.html  audio__context_8cppm.html  audio__context_8hpp.html  audio__context_8hpp_source.html  audio__device_8cppm.html  audio__device_8hpp.html  audio__device_8hpp_source.html  audio__source_8hpp.html  audio__source_8hpp_source.html  audio__stream_8cppm.html  audio__stream_8hpp.html  audio__stream_8hpp_source.html  audio__system_8hpp_source.html  benchmark_8cppm.html  benchmark_8hpp.html  benchmark_8hpp_source.html  bitmap_8cppm.html  bitmap_8hpp.html  bitmap_8hpp_source.html  bitmap__format_8cppm.html  bitmap__format_8hpp.html  bitmap__format_8hpp_source.html  bitmap__iterators_8hpp_source.html  chrono_8cppm.html  chrono_8hpp.html  chrono_8hpp_source.html  classes.html  classtr_1_1Angle-members.html  classtr_1_1Angle.html  classtr_1_1Angle.js  (+850 more)
.github/workflows/: main.yml
cmake/: trConfig.cmake.in
doxygen/: Doxyfile  custom.css
include/: audio_stream.hpp  bitmap.hpp  chrono.hpp  color.hpp  concepts.hpp  display.hpp  event.hpp  framebuffer.hpp  geometry.hpp  gl_context.hpp  keyboard.hpp  mouse.hpp  norm_cast.hpp  renderbuffer.hpp  sampler.hpp  shader_buffer.hpp  shader_pipeline.hpp  texture_unit.hpp  tr.hpp  ttfont.hpp  vertex_buffer.hpp  vertex_format.hpp  window.hpp
include/tr/: angle.hpp  angle_impl.hpp  audio_buffer.hpp  audio_context.hpp  audio_device.hpp  audio_source.hpp  audio_stream.hpp  audio_system.hpp  benchmark.hpp  bitmap.hpp  bitmap_format.hpp  bitmap_iterators.hpp  chrono.hpp  color.hpp  color_cast.hpp  color_cast_impl.hpp  common.hpp  concepts.hpp  display.hpp  draw_geometry.hpp  draw_geometry_impl.hpp  event.hpp  framebuffer.hpp  function.hpp  geometry.hpp  geometry_impl.hpp  gl_buffer.hpp  gl_context.hpp  graphics_buffer.hpp  graphics_context.hpp  handle.hpp  hashmap.hpp  imgui.hpp  index_buffer.hpp  iostream.hpp  keyboard.hpp  listener.hpp  mouse.hpp  norm_cast.hpp  overloaded_lambda.hpp  (+21 more)
include/tr/dependencies/: glad.h  khrplatform.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  (+173 more)
src/: angle.cppm  audio_buffer.cpp  audio_buffer.cppm  audio_context.cpp  audio_context.cppm  audio_device.cpp  audio_device.cppm  audio_source.cpp  audio_source.cppm  audio_stream.cpp  audio_stream.cppm  audio_system.cpp  benchmark.cpp  benchmark.cppm  bitmap.cpp  bitmap.cppm  bitmap_format.cpp  bitmap_format.cppm  bitmap_iterators.cpp  bitmap_to_gl_format.cppm  bitmap_to_gl_format.hpp  chrono.cppm  color.cppm  color_cast.cppm  concepts.cppm  display.cpp  display.cppm  draw_geometry.cppm  event.cpp  event.cppm  framebuffer.cpp  framebuffer.cppm  function.cppm  geometry.cppm  gl_buffer.cpp  gl_buffer.cppm  gl_call.hpp  gl_context.cpp  gl_context.cppm  glad.c  (+52 more)
src/imgui/: imgui_impl_opengl3.cpp  imgui_impl_sdl2.cpp
